Lab 2: JPA with PostgreSQL